--- a/geo-rtc/package.json
+++ b/geo-rtc/package.json
@@ -4,7 +4,7 @@
   "description": "Distributed data sharing and analysis",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "browserify geortcclient.js -o build/geortcclient.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,8 @@
     "WebRTC"
   ],
   "dependencies": {
+    "peer": "^0.6.1",
+    "peerjs": "^1.3.2",
     "socket.io": "3.x",
     "socket.io-client": "3.x"
   },
