--- a/src/package.json
+++ b/src/package.json
@@ -30,8 +30,9 @@
     "WebRTC"
   ],
   "dependencies": {
-    "peer": "^0.6.1",
-    "peerjs": "^1.3.2",
+    "@socket.io/admin-ui": "^0.5.1",
+    "peer": "^0.x",
+    "peerjs": "^1.3.x",
     "socket.io": "3.x",
     "socket.io-client": "3.x"
   },
