--- a/src/package.json
+++ b/src/package.json
@@ -31,6 +31,7 @@
   ],
   "dependencies": {
     "@socket.io/admin-ui": "^0.5.1",
+    "netcdfjs": "^2.0.2",
     "peer": "^0.x",
     "peerjs": "^1.3.x",
     "socket.io": "3.x",
