--- a/src/package.json
+++ b/src/package.json
@@ -31,11 +31,14 @@
   ],
   "dependencies": {
     "@socket.io/admin-ui": "^0.5.1",
+    "geotiff": "^2.0.7",
+    "h5wasm": "^0.6.3",
     "netcdfjs": "^2.0.2",
     "peer": "^0.x",
     "peerjs": "^1.3.x",
     "socket.io": "3.x",
-    "socket.io-client": "3.x"
+    "socket.io-client": "3.x",
+    "vgrib2": "^0.1.13"
   },
   "author": "UIHI Lab",
   "license": "ISC",
