new update - descriptions

--- a/.github/workflows/config.json
+++ b/.github/workflows/config.json
@@ -4,7 +4,7 @@
         "dictionaries": ["jsdoc"]
     },
     "source": {
-        "include": ["./src/" ],
+        "include": [],
         "includePattern": ".js",
         "excludePattern": "(node_modules)|(build)|(.*\\.json$)"
     },
