--- a/hydro-rtc/package.json
+++ b/hydro-rtc/package.json
@@ -32,8 +32,8 @@
   "dependencies": {
     "peer": "^0.6.1",
     "peerjs": "^1.3.2",
-    "socket.io": "3.x",
-    "socket.io-client": "3.x"
+    "socket.io": "^4.6.2",
+    "socket.io-client": "^4.7.5"
   },
   "author": "UIHI Lab",
   "license": "ISC",
